# anonymous_message_board

./: .env  Cargo.toml
migrations/2021-02-09-055026_create_messages/: up.sql
postgres-docker/: README.md
src/: main.rs  models.rs  schema.rs
