[package]
name = "message_board"
version = "0.1.0"
authors = ["Yuta Tachihara"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.0.2"
actix-web = "3.3.2"
lazy_static = "1.4.0"
serde = "1.0.123"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.0"